head-tail-api/tail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tail-api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tail-api
      version: v0.1
  template:
    metadata:
      labels:
        app: tail-api
        version: v0.1
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - tail-api
            topologyKey: kubernetes.io/hostname
      containers:
        - name: tail-api
          image: rajmor/demo-tail-api:v0.1
          ports:
            - name: http
              containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tail-api
  name: service-tail
  namespace: default
spec:
  ports:
  - name: http
    port: 8001
    protocol: TCP
    appProtocol: HTTP
    targetPort: 8001
  selector:
    app: tail-api
  type: ClusterIP
